auth fix , admin added
