# app/Notifications/PasswordResetRequest.php
@@ -1,0 +1,61 @@
+<?php
+namespace App\Notifications;
+
+use Illuminate\Bus\Queueable;
+use Illuminate\Notifications\Notification;
+use Illuminate\Contracts\Queue\ShouldQueue;
+use Illuminate\Notifications\Messages\MailMessage;
+
+class PasswordResetRequest extends Notification implements ShouldQueue
+{
+    use Queueable;
+    protected $token;
+    
+    /**
+    * Create a new notification instance.
+    *
+    * @return void
+    */
+    public function __construct($token)
+    {
+        $this->token = $token;
+    }
+
+    /**
+    * Get the notification's delivery channels.
+    *
+    * @param  mixed  $notifiable
+    * @return array
+    */
+    public function via($notifiable)
+    {
+        return ['mail'];
+    }
+
+     /**
+     * Get the mail representation of the notification.
+     *
+     * @param  mixed  $notifiable
+     * @return \Illuminate\Notifications\Messages\MailMessage
+     */
+     public function toMail($notifiable)
+     {
+        $url = url('/api/find/'.$this->token);
+
+        return (new MailMessage)
+            ->line('You are receiving this email because we received a password reset request for your account.')
+            ->action('Reset Password', url($url))
+            ->line('If you did not request a password reset, no further action is required.');
+    }
+    
+    /**
+    * Get the array representation of the notification.
+    *
+    * @param  mixed  $notifiable
+    * @return array
+    */
+    public function toArray($notifiable)
+    {
+        return [];
+    }
+}
